Revision history for perl distribution Convos

7.06 Not Released
 - Fix not showing popover menu in new private conversations
 - Fix == vs === bugs

7.05 2022-09-12T12:00:00+0900
 - Api.js does not have to extend Reactive.js
 - Fix Checkbox.svelte to emit "change" events
 - Fix being able to delete files

7.04 2022-09-12T09:25:12+0900
 - Fix showing both toggle icons on small screens
 - Ignore pull requests from "renovate" in Convos::Plugin::Bot::Action::Github
 - Will not show yourself in the participants list if offline
 - Removed form store since we have two way binding

7.03 2022-09-11T10:10:59+0900
 - Changed chat input menu to be visible on big screens
 - Fix showing the same user icon in the sidebar as in the chat for CamelCaseNick
 - Fix syncing form field data on login page #753
 - Fix picking icons for nicks containing just numbers
 - Fix being able to jump from conversation to server settings in sidebar
 - Fix showing the same icon in the sidebar as in the chat
 - Updated FontAwesome to 5.15.4
 - Updated Node dependencies
 - Updated nick popover animation
 - Add <ChatMessage/> component

7.02 2022-04-26T11:51:00+0900
 - Fix "recover" sub command
 - Fix not including ")" in links
 - Improved guessing Convos video links

7.01 2022-03-17T08:36:00+0900
 - Fix creating connection when using Convos::Plugin::Auth::Header #696
 - Fix loading /events when using Convos::Plugin::Auth::Header #704

7.00 2022-03-13T17:39:00+0900
 - Bumped required Perl to 5.20
 - Changed to using async/await in the Perl code
 - Changed "raw messages" to a persistent setting
 - Add Convos::Plugin::Auth::Header #696
 - Add styling for more user modes: "admin", "bot" and "half operator"
 - Replaced backend.user helper to user.load_p
 - Brought back Convos::Plugin::Paste to simplify overriding multiline message handling
 - Fix not hiding the sidebar settings when scrolling up #689
 - Ignoring pull requests from "dependabot" in Convos::Plugin::Bot::Action::Github
 - Highlights since 6.00