@@ -3,7 +3,7 @@ import Icon from '../Icon.svelte';
 import Operation from '../../store/Operation';
 import Time from '../../js/Time';
 
-const minLoadingTime = 700;
+const minLoadingTime = 500;
 
 let animation = '';
 let className = '';
@@ -17,6 +17,8 @@ export let icon = '';
 export let op = new Operation({api: false, id: ''});
 export let type = '';
 
+let iconName = icon;
+
 $: $op.is('loading') && loadingState(true);
 $: $op.is('loading') || setTimeout(() => loadingState(false), minLoadingTime - (new Time().toEpoch() - t0));
 
@@ -26,11 +28,12 @@ $: disabledProp = disabled || forceDisable;
 function loadingState(loading) {
   if (loading) t0 = new Time().toEpoch();
   animation = loading ? 'spin' : '';
+  iconName = loading ? 'spinner' : icon;
   forceDisable = loading;
 }
 </script>
 
 <button class="{classNames.join(' ')}" disabled="{disabledProp}" type="{type}" on:click>
-  <Icon {animation} name="{icon}"/>
+  <Icon animation="{animation}" name="{iconName}"/>
   <slot/>
 </button>
